--- a/_posts/2021-08-14-new-additions/new-additions.Rmd
+++ b/_posts/2021-08-14-new-additions/new-additions.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Leaving known waters"
 description: |
-  Over the last weeks and months I have collected three features for the blog itself that I want to implement. None are built into the {distill} package, so there's some manual work needed. I'll go through the changes here.
+  Over the last weeks and months I have collected three features for the blog itself that I want to implement. Covers: A custom parallax scrolling landing page, Utterances comments and a custom 404 error page. None are built into the {distill} package, so there's some manual work needed. I'll go through the changes here.
 author:
   - name: Christian A. Gebhard
     url:
