Refines details on the xaringanExtra clipboard feature.
Sets colors of fa-icons to jolly data theme colors.

--- a/_posts/2021-11-02-secret-santa/secret-santa.Rmd
+++ b/_posts/2021-11-02-secret-santa/secret-santa.Rmd
@@ -49,8 +49,8 @@ library(tidyverse)
 ```{r xaringanExtra-clipboard, include=FALSE}
 htmltools::tagList(
   xaringanExtra::use_clipboard(
-    button_text = "<i class=\"fa fa-clipboard\"></i>",
-    success_text = "<i class=\"fa fa-check\" style=\"color: #90BE6D\"></i>",
+    button_text = "<i class=\"fa fa-clipboard\" style=\"color: #394755\"></i>",
+    success_text = "<i class=\"fa fa-check\" style=\"color: #1BC7DC\"></i>",
   ),
   rmarkdown::html_dependency_font_awesome()
 )
