Finalizes post for first publishing. Rebuilt site.

--- a/_posts/2021-11-02-secret-santa/secret-santa.Rmd
+++ b/_posts/2021-11-02-secret-santa/secret-santa.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Secret Santa"
+title: "Santa. Secret Santa."
 description: |
-  With "Spooky Season" coming to an end, Holiday Season is up next. If you have done Secret Santa rounds before, you might have run into the issue that that someone drew his or her own name from the lots. How often will you have to repeat the drawing until no one draws her or his own name? 
+  With "Spooky Season" coming to an end, Holiday Season is up next. If you have done Secret Santa rounds before, you might have wondered, what the odds are that someone draws his or her own name from the lots.
 author:
   - name: Christian A. Gebhard 
     url: https://twitter.com/c_gebhard
@@ -20,7 +20,7 @@ categories:
   - python
   - simulation
 base_url: https://jollydata.blog/posts/2021-11-02-secret-santa
-preview: images/windrose_black.png
+preview: images/gift.png
 twitter:
   site: "@JollydataB"
   creator: "@c_gebhard"
@@ -57,14 +57,14 @@ htmltools::tagList(
 ```
 
 ## Introduction
-Secret Santa is a game related to the tradition of giving gifts to one another on Christmas. In some regions the game is quite popular and is played in many communities, sports groups, school classes,....
+Secret Santa is a game related to the tradition of giving gifts to one another on Christmas, with the twist that you (usually) don't know who gave you the gift. In some regions the game is quite popular and is played in many communities, sports groups, school classes,...
 
-At the time of writing, there are Wikipedia articles on secret santa traditions available in 11 languages. I haven't read all of them, but I found out that there are many different variations across the world.  
+At the time of writing, there are Wikipedia articles on Secret Santa traditions available in 11 languages. I haven't read all of them, but it is clear, that there are many different variations across the world.
 In Germany this game is called "Wichteln". There's also a variation called "Schrottwichteln" where you ought to give something that is worthless to you, but might be of value for someone else.
 
 For this post I will use the variant that I got to know as the "classic version" and will build the **mathematical question** on these rules:
 
-> A group of N participants draws lots from a bucket. On each lot is the name of one participant. Each name is included just once, so that the number of lots matches the number of participants.
+> A group of N participants draws lots from a bucket. On each lot is the name of one participant. Each name is included just once, so that the number of lots matches the number of participants. Each participant draws one lot.
 > If any of the participants draws their own name, the draw is invalid and the whole process has to be repeated.  
 > **Q: What is the probability, that a draw is valid for any group size N?**^[This simple riddle came across my mind, when I was invited to join a *Wichtelgruppe* in 2020. As I couldn't find a convincing intuitive solution and my school combinatorics knwoledge wasn't quite sufficient, I went for a simulation to get a feeling for the numbers. I later discussed this with a friend working in maths, who eventually pointed me to the correct equations to describe the problem properly.]
 
@@ -87,7 +87,7 @@ import matplotlib.pyplot as plt
 import seaborn as sns
 import random
 
-random.seed(123)
+np.random.seed(1224)
 
 ```
 
@@ -137,13 +137,14 @@ def verify_draft(people, lots):
     True if the round was valid, false, if not.
 
     """
-    # check whether anyone drew his own lot
-    # print(f"People: {people}")
-    # print(f"Lots:   {lots}")
+
+    # compare participants with the lot they drew
     check = people == lots
-    # print(check)
+
+    # check if no one drew the own name
     valid_round = not any(check)
-    # print(f"valid round: {valid_round}")
+
+    # return true or false
     return valid_round
 
 ```
@@ -172,10 +173,8 @@ def sim_wichteln(n_people = 10, rounds = 100):
     for i in range(rounds):
         people, lots = draw_lots(n_people)
         valid_round = verify_draft(people, lots)
-        # print(f"Valid round: {valid_round}")
+
         results.append(valid_round)
-        # if i % (rounds/10) == 0:
-        #     print(f"{i} out of {rounds} rounds simulated.")
         
     return np.mean(results)
 
@@ -206,7 +205,6 @@ def sim_groups(max_group = 1000, rounds = 1000):
     for n_people in range(1, max_group):
         results = sim_wichteln(n_people, rounds)
         results_df = results_df.append({'people':n_people, 'rounds':rounds, 'valid':results}, ignore_index =True)
-        # print(f"The fraction of correct wichtel-drafts in {rounds} rounds for a group of {n_people} was {results}.")
     
     return results_df
 
@@ -220,14 +218,16 @@ simulated_groups = sim_groups(max_group = 50, rounds = 100)
 
 fig, ax0 = plt.subplots(1, 1, figsize=(8, 5))
 plt.suptitle("Fraction of valid draws from 100 simulated\nrounds in different group sizes", fontsize=18, y=0.95)
+
 sns.scatterplot(x = simulated_groups.people, y = simulated_groups.valid, ax=ax0)
 ax0.set_xlabel("Group size [n people]")
 ax0.set_ylabel("Fraction of valid rounds in 100 simulated rounds")
 sns.despine()
+
 plt.show()
 ```
 
-As you can see in the graph, there is at least one outlier: `n = 1` (fraction of `r filter(py$simulated_groups, people == "1") |> pull(valid)`). But most other values are distributed between `0.3` and `0.5`. The summary statistics of the simulated numbers^[for groups of `n >= 4`, see next chapter for explanation] are:
+As you can see in the graph, there is at least one outlier: `n = 1` (fraction of 0). But most other values are distributed between `0.3` and `0.5`. The summary statistics of the simulated numbers^[for groups of `n >= 4`, see next chapter for explanation] are:
 
 ```{python}
 print(simulated_groups[simulated_groups.people > 3].describe())
@@ -280,19 +280,19 @@ Let's call the new function with increasing orders of magnitude:
 
 ```{python, echo=TRUE, include=TRUE}
 
-sim_steps(max_group = 1000, round_steps = [10, 100, 1000])
+sim_steps(max_group = 1000, round_steps = [10, 100, 1000, 5000])
 ```
 
 The stepwise increase demonstrates, that the fraction of correct draws narrows down somewhere around `0.36`. So it seems, that the fraction is not trending towards 1 or 0, but rather approaches a certain value somewhere below `0.4`.
-If this simulation is sufficiently reliable for you, you can take this figure as an estimate for the next secret santa group you participate in and skip the rest.
+If this simulation is sufficiently reliable for you, you can take this figure as an estimate for the next Secret Santa group you participate in and skip the rest.
 
 However, if you're into math, you might recognize the direction where this is going: isn't 0.36something close to...yes it is!
 
 ## The actual math is beautiful
 
-The necessary keyword, that describes the underlying math is "derangements". By definition, a "derangement" is a permutation without fixed points, so no element appears in its previous position. Applied to the example of this post, someone drawing his or her own name would be such a fixed point, so a valid round, where this does not happen, is a proper "derangement".
+The necessary keyword, which describes the underlying math is "derangements". By definition, a "derangement" is a permutation without fixed points, i.e. no element appears in its previous position. Applied to the example of this post, someone drawing his or her own name would be such a fixed point. Hence, a valid round, where this does not happen, is a proper "derangement".
 
-<aside>For the extensive and formally correct representation of the mathematical derivation, please refer to this wikipedia article: [Derangement](https://en.wikipedia.org/wiki/Derangement)</aside>
+<aside>For the extensive and full representation of the mathematical derivation, please refer to this wikipedia article: [Derangement](https://en.wikipedia.org/wiki/Derangement)</aside>
 
 When $n!$ is the factorial of a set of size $n$, then the number of derangements is the *subfactorial* $!n$.
 
@@ -310,11 +310,11 @@ $$\lim_{n \to \infty} p_n = \sum_{i=0}^{\infty}\frac{(-1)^i}{i!} = \frac{1}{e}$$
 
 where $e$ is "Euler's number"^[~2.718].
 
-This means that the fraction of valid draws for secret santa groups^[of at least 4 people] tends towards $\frac{1}{e}\sim 0,3678794$.
+This means that the fraction of valid draws for Secret Santa groups tends towards $\frac{1}{e}\sim 0,3678794$. However this only applies for groups of at least 4 people. In smaller communities the numbers are different.
 
 For groups of size 1 to 10 the fractions of valid derangements are as follows^[due to time constraints I'm taking these numbers from the [German Wikipedia article](https://de.wikipedia.org/wiki/Fixpunktfreie_Permutation) on derangements.]
 
-```{r, include=FALSE}
+```{r}
 ffp <- tidyr::tribble(
   ~n, ~subfactorials, ~factorials, ~fraction,
   0, 1, 1, 1,
@@ -329,17 +329,17 @@ ffp <- tidyr::tribble(
   9,	133496,	362880,	0.36787918,
   10,	1334961,	3628800,	0.36787946
 )
-```
 
-```{r}
 ffp |>
   knitr::kable() |>
   kableExtra::kable_paper()
 
 ```
 
+As you can see, for $n=1$, a derangement is impossible. For $n=2$ the fraction is every other game, while for $n=3$ the probability is $\frac{1}{3}$.
+
 ## Summary and comments
 
-If you're planning on starting a secret santa round infinitely many people, you can expect a valid draw of lots in $\frac{1}{e}\sim 0,3678794$. If you're doing it in reasonably large groups of at least 4 participants, the probability that no one draws a lot with her or his own name on is roughly 37%.
+If you're planning on starting a Secret Santa round infinitely many people, you can expect a valid draw of lots in $\frac{1}{e}\sim 0,3678794$. **If you're playing it in groups of at least 4 participants, the probability that no one draws a lot with her or his own name on is roughly 37%, *no matter, how many people participate*.**
 
-Did this meet your intuition, that you had in the beginning? Leave a reply below, if so, if not so or if you have made different experiences in your secret santa rounds!
+Thanks for reading! Did this meet your intuition, that you had in the beginning? Leave a reply below if so, but also if *not* so or if you have made different experiences in your Secret Santa rounds!
