Changes preview image and rebuilds site.
Additional minor text changes.

--- a/_posts/2021-11-02-secret-santa/secret-santa.Rmd
+++ b/_posts/2021-11-02-secret-santa/secret-santa.Rmd
@@ -340,6 +340,7 @@ As you can see, for $n=1$, a derangement is impossible. For $n=2$ the fraction i
 
 ## Summary and comments
 
-If you're planning on starting a Secret Santa round infinitely many people, you can expect a valid draw of lots in $\frac{1}{e}\sim 0,3678794$. **If you're playing it in groups of at least 4 participants, the probability that no one draws a lot with her or his own name on is roughly 37%, *no matter, how many people participate*.**
+If you're planning on starting a Secret Santa round with infinitely many people, you can expect a valid draw of lots in $\frac{1}{e}\sim 0,3678794$.  
+**If you're playing it in groups of at least 4 participants, the probability that no one draws a lot with her or his own name on is roughly 37%, *no matter, how many people participate*.**
 
 Thanks for reading! Did this meet your intuition, that you had in the beginning? Leave a reply below if so, but also if *not* so or if you have made different experiences in your Secret Santa rounds!
