--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -1,9 +1,42 @@
 ---
 title: "data viz challenges"
+description: |
+  A collection data visualization from challenges such as #TidyTuesday.
+output: 
+  distill::distill_article:
+    toc: false
+    css: "strapless.css"
 base_url: https://jollydata.blog
-preview: resources/logo_w_name.png
-listing: challenges
+preview: resources/logo_dynamic.png
 twitter:
   site: "@JollydataB"
   creator: "@c_gebhard"
 ---
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+```
+
+
+
+```{r}
+library(tidyverse)
+# Read in projects csv file 
+projects <- readr::read_csv(here::here("resources", "challenges.csv"))
+```
+
+```{r projects, echo=FALSE, layout="l-page"}
+projects %>% 
+  bs4cards::cards(
+    link = url,
+    image = src,
+    layout = "image-only",
+    tags = paste("All;", tags),
+    border_radius = 2,
+    border_width = 1,
+    border_colour = "#394755",
+    spacing = 5,
+    width = 4,
+  )
+```
