Fixes minor typo.

--- a/disclaimer.Rmd
+++ b/disclaimer.Rmd
@@ -10,7 +10,7 @@ The blog posts, statistical analyses, the data visualizations and conclusions, a
 Despite thorough review, the author is not taking any responsibility or liability for external sources that are being linked to. The liability completely lies with the operators of these external sources.
 
 ## Medical Disclaimer
-The contents of the blog articles are of educational nature and are intended as general information and learning material. The views expressed are explicitly of personal nature and the author does not represent nor speak for his employer or professional group. The author is by no means giving any medical advice, nor making diagnoses and is explicitly not giving specific recommendations regarding diseases, conditions ot the treatment thereof. The contents of the blog articles are not suited to be applied to real patient cases and if treatments, applications or dosages are mentioned, no guarantee can be given for the correctness and completeness of the information. The content and information on this blog cannot replace the clinical judgment of a healthcare professional.
+The contents of the blog articles are of educational nature and are intended as general information and learning material. The views expressed are explicitly of personal nature and the author does not represent nor speak for his employer or professional group. The author is by no means giving any medical advice, nor making diagnoses and is explicitly not giving recommendations regarding diseases, conditions or the treatment thereof. The contents of the blog articles are not suited to be applied to real patient cases and if treatments, applications or dosages are mentioned, no guarantee can be given for the correctness and completeness of the information. The content and information on this blog cannot replace the clinical judgment of a healthcare professional.
 
 ## Jurisdiction
 The blog is hosted in the Federal Republic of Germany. The place of Jurisdiction for any claims arising regarding the blog or the blog articles is the Federal Republic of Germany.
