--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -1,11 +1,10 @@
 ---
-title: "data viz challenges"
+title: "data viz gallery"
 description: |
-  This is a collection of contributions I made for challenges within the DataViz community such as #TidyTuesday. The preview images link to the corresponding articles.
+  This is a collection of datavisualizations I created. Many are contributions to challenges within the DataViz community such as #TidyTuesday or the #30DayChartChallenge. Some resulted from personal data exploration projects found on this blog. The code can either be found in blog posts or on my github page.
 output: 
   distill::distill_article:
     toc: false
-    css: "strapless.css"
 base_url: https://jollydata.blog
 preview: resources/logo_dynamic.png
 twitter:
@@ -18,25 +17,14 @@ twitter:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
+```{r layout="l-screen-inset"}
+library(pixture)
 
+pixgallery(
+  list.files("resources/challenges_images/", 
+             full.names=TRUE),
+  dim="350px",
+  gap = "10px"
+)
 
-```{r}
-library(tidyverse)
-# Read in projects csv file 
-projects <- readr::read_csv(here::here("resources", "challenges.csv"))
-```
-
-```{r projects, echo=FALSE, layout="l-page"}
-projects %>% 
-  bs4cards::cards(
-    link = url,
-    image = src,
-    layout = "image-only",
-    tags = paste("All;", tags),
-    border_radius = 2,
-    border_width = 1,
-    border_colour = "#394755",
-    spacing = 5,
-    width = 3,
-  )
 ```
